# webgpu-base

./: .clangd  .gitignore  CMakeLists.txt  README.md
src/: main.cpp  metal.mm  webgpu.cpp
